--- a/medlegal/web/Admin/agregarCargo.xhtml
+++ b/medlegal/web/Admin/agregarCargo.xhtml
@@ -17,7 +17,7 @@
                         <p:overlayPanel id="datos" for="agregar" hideEffect="fade" style="background-color: scrollbar">
                             <p:panelGrid columns="2" style="width: 400px">
                                 <h:outputLabel value="Nombre del Cargo *" />
-                                <p:inputText id="nombre" value="#{cargoBean.nombre}" required="true">
+                                <p:inputText id="nombre" value="#{cargoBean.nombre}" required="true" label="Cargo">
                                     <f:validateLength minimum="2"/>
                                 </p:inputText>
                                 <h:outputLabel value="Los campos con * son obligatorios"  style="font-style: italic; color: #045491"/>
@@ -25,13 +25,12 @@
                             </p:panelGrid>
                         </p:overlayPanel>
                         <p:menubar style="height: 26px; padding-right: 1%">
-                            <p:menuitem id="agregar" value="Agregar Cargo" update=""  immediate="true" icon="ui-icon-gear"/>   
-                            <p:menuitem id="modificar" value="Modificar Datos del Cargo" actionListener="#{usuarioBean.visible()}" immediate="true" icon="ui-icon-pencil"/> 
+                            <p:menuitem id="agregar" value="Agregar Cargo" update=""  immediate="true" icon="ui-icon-gear"/>
                             <p:menuitem value="Actualizar" update="cargoList" icon="ui-icon-arrowrefresh-1-w" ajax="false"/> 
                         </p:menubar>   
-                        <p:message for="nombre" display="" /> 
+                        <p:messages for="nombre" closable="true" showSummary="true"/> 
                         <p:dataTable var="car" value="#{cargoBean.cargoListado()}" id="cargoList" editable="true" 
-                                     style="width: 400px" scrollable="true" rows="16">  
+                                     style="width: 600px" scrollHeight="100">  
                             <p:menubar />
                             <f:facet name="header">  
                                 Listado de Cargos
@@ -53,7 +52,7 @@
                                     </f:facet>  
                                 </p:cellEditor>  
                             </p:column>
-                            <p:column headerText="Modificar" style="width:20px" rendered="#{cargoBean.modificar}" >  
+                            <p:column headerText="Editar" style="width:20px" >  
                                 <p:rowEditor/>  
                             </p:column>  
                         </p:dataTable>
