--- a/medlegal/web/Admin/agregarClase.xhtml
+++ b/medlegal/web/Admin/agregarClase.xhtml
@@ -9,24 +9,15 @@
     <body>
 
         <ui:composition template="./plantillaAdmin.xhtml">
-
-            <ui:define name="top">
-
-            </ui:define>
-
-            <ui:define name="menu">
-                
-            </ui:define>
-
             <ui:define name="content">
                 <f:view>
-                    <h1><h:outputText value="Agregar Clase" /></h1>
+                    <h1><h:outputText value="Clase" /></h1>
 
                     <h:form>           
                         <p:overlayPanel id="datos" for="agregar" hideEffect="fade" style="background-color: scrollbar">
                             <p:panelGrid columns="2" style="width: 400px">
                                 <h:outputLabel value="Nombre de la clase: *" />
-                                <p:inputText id="nombre" value="#{claseBean.nombre}" required="true">
+                                <p:inputText id="nombre" value="#{claseBean.nombre}" required="true" label="Clase">
                                     <f:validateLength minimum="2"/>
                                 </p:inputText>
                                 <h:outputLabel value="Los campos con * son obligatorios"  style="font-style: italic; color: #045491"/>
@@ -34,13 +25,13 @@
                             </p:panelGrid>
                         </p:overlayPanel>
                         <p:menubar style="height: 26px; padding-right: 1%">
-                            <p:menuitem id="agregar" value="Agregar Clase" update=""  immediate="true" icon="ui-icon-gear"/>   
-                            <p:menuitem id="modificar" value="Modificar Datos de la Clase" actionListener="#{usuarioBean.visible()}" immediate="true" icon="ui-icon-pencil"/> 
+                            <p:menuitem id="agregar" value="Agregar Clase" update=""  immediate="true" icon="ui-icon-gear"/> 
                             <p:menuitem value="Actualizar" update="claseList" icon="ui-icon-arrowrefresh-1-w" ajax="false"/> 
                         </p:menubar>   
-                        <p:message for="nombre" display="" /> 
+                        <p:messages closable="true" showSummary="true"/> 
 
-                        <p:dataTable var="cla" value="#{claseBean.claseLista()}" id="claseList" editable="true" style="width: 500px" scrollable="true" scrollHeight="300">  
+                        <p:dataTable var="cla" value="#{claseBean.claseLista()}" id="claseList" editable="true" style="width: 500px" 
+                                     scrollHeight="300">  
                             <p:menubar />
                             <f:facet name="header">  
                                 Listado de Clases
@@ -62,7 +53,7 @@
                                     </f:facet>  
                                 </p:cellEditor>  
                             </p:column>
-                            <p:column headerText="Modificar" style="width:20px" rendered="#{claseBean.modificar}" >  
+                            <p:column headerText="Modificar" style="width:20px" >  
                                 <p:rowEditor/>  
                             </p:column>  
                         </p:dataTable>
