--- a/medlegal/web/Admin/plantillaAdmin.xhtml
+++ b/medlegal/web/Admin/plantillaAdmin.xhtml
@@ -9,7 +9,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <h:outputStylesheet name="./css/defaultAdmin.css"/>
         <h:outputStylesheet name="./css/cssLayoutAdmin.css"/>
-        <title>Facelets Template</title>
+        <title>S.R.P Administrador</title>
     </h:head>
 
     <h:body>
