Actualizacion de los perfiles y archivos de cada carpeta

--- a/medlegal/web/Dueno/agregarPanorama.xhtml
+++ b/medlegal/web/Dueno/agregarPanorama.xhtml
@@ -8,7 +8,7 @@
 
     <body>
 
-        <ui:composition template="./plantillaAdmin.xhtml">
+        <ui:composition template="./plantillaDueno.xhtml">
 
             <ui:define name="content">
                 <f:view>
