--- a/medlegal/web/Dueno/plantillaDueno.xhtml
+++ b/medlegal/web/Dueno/plantillaDueno.xhtml
@@ -39,10 +39,10 @@
             <h:form id="fmenu">
                 <p:menubar>  
                     <p:submenu label="Proceso" >  
-                        <p:menuitem value="Riesgo" action="/Admin/agregarRiesgo" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Procesos" action="/Admin/agregarProceso" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Panorama de Riesgos" action="/Admin/agregarPanorama" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Valoracion" action="/Admin/agregarValoracion" icon="ui-icon-document" ajax="false"/>                           
+                        <p:menuitem value="Riesgo" action="/Dueno/agregarRiesgo" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Procesos" action="/Dueno/agregarProceso" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Panorama de Riesgos" action="/Dueno/agregarPanorama" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Valoracion" action="/Dueno/agregarValoracion" icon="ui-icon-document" ajax="false"/>                           
                     </p:submenu>     
 
                     <p:submenu label="Reportes">
