--- a/medlegal/web/Ejecutor/plantillaEjecutor.xhtml
+++ b/medlegal/web/Ejecutor/plantillaEjecutor.xhtml
@@ -39,8 +39,8 @@
             <h:form id="fmenu">
                 <p:menubar>  
                     <p:submenu label="Proceso" >  
-                        <p:menuitem value="Panorama de Riesgos" action="/Admin/agregarPanorama" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Valoracion" action="/Admin/agregarValoracion" icon="ui-icon-document" ajax="false"/>                           
+                        <p:menuitem value="Panorama de Riesgos" action="/Ejecutor/agregarPanorama" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Valoracion" action="/Ejecutor/agregarValoracion" icon="ui-icon-document" ajax="false"/>                           
                     </p:submenu> 
                     
                     <p:submenu label="Reportes">
