--- a/medlegal/web/Dueno/agregarRiesgo.xhtml
+++ b/medlegal/web/Dueno/agregarRiesgo.xhtml
@@ -8,7 +8,7 @@
 
     <body>
 
-        <ui:composition template="./plantillaAdmin.xhtml">
+        <ui:composition template="./plantillaDueno.xhtml">
 
             <ui:define name="content">
                 <h1><h:outputText value="Agregar Riesgo" /></h1>
