--- a/medlegal/web/Gestor/agregarValoracion.xhtml
+++ b/medlegal/web/Gestor/agregarValoracion.xhtml
@@ -8,7 +8,7 @@
 
     <body>
 
-        <ui:composition template="./plantillaAdmin.xhtml">
+        <ui:composition template="./plantillaGestor.xhtml">
 
             <ui:define name="content">
 
