--- a/medlegal/web/Dueno/menuDueno.xhtml
+++ b/medlegal/web/Dueno/menuDueno.xhtml
@@ -8,7 +8,7 @@
 
     <body>
 
-        <ui:composition template="./plantillaDueño.xhtml">
+        <ui:composition template="./plantillaDueno.xhtml">
 
             <ui:define name="top">
                 
