--- a/medlegal/web/Operador/plantillaOperador.xhtml
+++ b/medlegal/web/Operador/plantillaOperador.xhtml
@@ -39,24 +39,24 @@
             <h:form id="fmenu">
                 <p:menubar>  
                     <p:submenu label="Funcionarios" > 
-                        <p:menuitem value="Perfiles" action="/Admin/agregarPerfil" icon="ui-icon-document" ajax="false"/> 
-                        <p:menuitem value="Cargo" action="/Admin/agregarCargo" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Grado" action="/Admin/agregarGrado" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Clase" action="/Admin/agregarClase" icon="ui-icon-document" ajax="false"/>
+                        
+                        <p:menuitem value="Cargo" action="/Operador/agregarCargo" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Grado" action="/Operador/agregarGrado" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Clase" action="/Operador/agregarClase" icon="ui-icon-document" ajax="false"/>
                     </p:submenu>    
 
                     <p:submenu label="Administrativo" >  
-                        <p:menuitem value="Clasificacion" action="/Admin/agregarClasificacion" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Enfoque" action="/Admin/agregarEnfoque" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Estado" action="/Admin/agregarEstado" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Nombre Proceso" action="/Admin/agregarNombreProceso" icon="ui-icon-document" ajax="false"/>                        
-                        <p:menuitem value="Tipo Proceso" action="/Admin/agregarTipoProceso" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Area" action="/Admin/agregarArea" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Ciudad" action="/Admin/agregarCiudad" icon="ui-icon-document" ajax="false"/> 
-                        <p:menuitem value="Departamento" action="/Admin/agregarDepartamento" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Regional" action="/Admin/agregarRegional" icon="ui-icon-document" ajax="false"/> 
-                        <p:menuitem value="Seccional" action="/Admin/agregarSeccional" icon="ui-icon-document" ajax="false"/>
-                        <p:menuitem value="Sub-Area" action="/Admin/agregarSubarea" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Clasificacion" action="/Operador/agregarClasificacion" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Enfoque" action="/Operador/agregarEnfoque" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Estado" action="/Operador/agregarEstado" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Nombre Proceso" action="/Operador/agregarNombreProceso" icon="ui-icon-document" ajax="false"/>                        
+                        <p:menuitem value="Tipo Proceso" action="/Operador/agregarTipoProceso" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Area" action="/Operador/agregarArea" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Ciudad" action="/Operador/agregarCiudad" icon="ui-icon-document" ajax="false"/> 
+                        <p:menuitem value="Departamento" action="/Operador/agregarDepartamento" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Regional" action="/Operador/agregarRegional" icon="ui-icon-document" ajax="false"/> 
+                        <p:menuitem value="Seccional" action="/Operador/agregarSeccional" icon="ui-icon-document" ajax="false"/>
+                        <p:menuitem value="Sub-Area" action="/Operador/agregarSubarea" icon="ui-icon-document" ajax="false"/>
                     </p:submenu>
                     
                     <p:menuitem value="Cerrar Sesion" action="#{usuarioLoginBean.logout()}" style="margin-left: 640px" icon="ui-icon-extlink"/>
