correccion modulo de panorama

--- a/medlegal/web/reportes/porProcesoReporte.xhtml
+++ b/medlegal/web/reportes/porProcesoReporte.xhtml
@@ -41,7 +41,7 @@
                                 <f:facet name="header">  
                                     <h:outputText value="Codigo del Proceso" />  
                                 </f:facet>  
-                                <h:outputText value="#{pro.codigo}" />  
+                                <h:outputText value="#{pro.codigoproceso}" />  
                             </p:column>  
 
                             <p:column width="260">  
